2008-10-29  Enrico Tröger  <enrico(dot)troeger(at)uvena(dot)de>

 * src/speller.c, src/speller.h, src/scplugin.c:
   Improve the auto-detection of the user's language (handle locales
   like 'de_DE.UTF-8' correctly).


2008-10-25  Enrico Tröger  <enrico(dot)troeger(at)uvena(dot)de>

 * src/speller.c:
   Add some error checking and prevent crashes if Enchant doesn't
   provide any dictionaries.
   Plug a little memory leak.
   If showing suggestions in the messages window is disabled, don't
   check for suggestions at all, this heavily reduces the time needed
   for a full document check.
 * src/gui.c:
   Ignore numbers when updating the editor menu.
   Rename the editor menu item to 'Spelling Suggestions'.
   When adding words to the dictionary, remove all indicators on
   these words.
 * src/gui.c, src/gui.h, src/scplugin.c:
   Add keybinding to toggle the 'Check while typing' setting.


2008-10-17  Enrico Tröger  <enrico(dot)troeger(at)uvena(dot)de>

 * src/spellcheck.c, src/scplugin.c, src/gui.c, src/speller.c,
   src/scplugin.h, src/gui.h, src/speller.h, src/Makefile.am,
   po/POTFILES.in:
   Split spellcheck.c into three source files.
 * README:
   Add some notes about known problems, especially with the
   Zemberek provider.


2008-10-16  Enrico Tröger  <enrico(dot)troeger(at)uvena(dot)de>

 * src/spellcheck.c:
   Test whether stored language is (still) available in enchant and fall
   back to the first supported language if not.


2008-10-15  Enrico Tröger  <enrico(dot)troeger(at)uvena(dot)de>

 * src/spellcheck.c:
   Update to Geany API 100 - use p_ui->add_document_sensitive().


2008-10-13  Nick Treleaven  <nick(dot)treleaven(at)btinternet(dot)com>

 * src/spellcheck.c:
   Update to Geany API 99 - use p_plugin->add_toolbar_item().


2008-09-18  Nick Treleaven  <nick(dot)treleaven(at)btinternet(dot)com>

 * src/spellcheck.c:
   Update to Geany API 95.


2008-09-17  Enrico Tröger  <enrico(dot)troeger(at)uvena(dot)de>

 * src/spellcheck.c: